--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@babel/preset-env": "^7.8.6",
     "@intlify/vue-i18n-loader": "^0.6.1",
     "babel-loader": "^8.0.6",
+    "cross-env": "^7.0.0",
     "css-loader": "^3.4.2",
     "file-loader": "^5.1.0",
     "html-webpack-plugin": "^3.2.0",
@@ -44,6 +45,10 @@
     "yaml-loader": "^0.5.0"
   },
   "dependencies": {
+    "koa": "^2.11.0",
+    "koa-bodyparser": "^4.2.1",
+    "koa-router": "^8.0.8",
+    "koa-static": "^5.0.0",
     "vue": "^2.6.11",
     "vue-i18n": "^8.15.4",
     "vue-router": "^3.1.6"
