--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "index.js",
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack",
+    "start": "node src/index",
     "dev": "webpack-dev-server",
     "watch": "webpack --watch"
   },
@@ -45,10 +46,18 @@
     "yaml-loader": "^0.5.0"
   },
   "dependencies": {
+    "@koa/multer": "^2.0.2",
+    "@koa/router": "^8.0.8",
+    "aws-sdk": "^2.630.0",
+    "axios": "^0.19.2",
+    "axios-cookiejar-support": "^0.5.1",
     "koa": "^2.11.0",
     "koa-bodyparser": "^4.2.1",
-    "koa-router": "^8.0.8",
+    "koa-mount": "^4.0.0",
+    "koa-send": "^5.0.0",
     "koa-static": "^5.0.0",
+    "mongodb": "^3.5.4",
+    "multer": "^1.4.2",
     "vue": "^2.6.11",
     "vue-i18n": "^8.15.4",
     "vue-router": "^3.1.6"
