--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/sparcs-kaist/sparcs.org-v2#readme",
   "devDependencies": {
     "@babel/core": "^7.8.6",
+    "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/preset-env": "^7.8.6",
     "@intlify/vue-i18n-loader": "^0.6.1",
     "babel-loader": "^8.0.6",
@@ -46,15 +47,19 @@
     "yaml-loader": "^0.5.0"
   },
   "dependencies": {
+    "@babel/runtime": "^7.8.4",
     "@khinenw/express-async-router": "^1.0.0",
-    "aws-sdk": "^2.630.0",
+    "aws-sdk": "^2.631.0",
     "axios": "^0.19.2",
     "axios-cookiejar-support": "^0.5.1",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
+    "eccrypto": "^1.1.3",
     "express": "^4.17.1",
-    "mongodb": "^3.5.4",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.9.3",
     "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "vue": "^2.6.11",
     "vue-i18n": "^8.15.4",
     "vue-router": "^3.1.6"
