--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "multer-s3": "^2.9.0",
     "vue": "^2.6.11",
     "vue-i18n": "^8.15.4",
-    "vue-router": "^3.1.6"
+    "vue-router": "^3.1.6",
+    "vuex": "^3.1.2"
   }
 }
