--- a/config.example.json
+++ b/config.example.json
@@ -6,5 +6,7 @@
     "privateKey": "your-private-key.pem",
     "ssoClient": "your-sso-client-id",
     "ssoSecret": "your-sso-secret",
-    "tokenExpiresIn": 7200
+    "tokenExpiresIn": 7200,
+    "awsS3AccessKey": "your-aws-s3-access-key-id",
+    "awsS3SecretKey": "your-aws-s3-secret-access-key"
 }
