--- a/config.example.json
+++ b/config.example.json
@@ -8,5 +8,6 @@
     "ssoSecret": "your-sso-secret",
     "tokenExpiresIn": 7200,
     "awsS3AccessKey": "your-aws-s3-access-key-id",
-    "awsS3SecretKey": "your-aws-s3-secret-access-key"
+    "awsS3SecretKey": "your-aws-s3-secret-access-key",
+	"awsS3BucketName": "sparcs.home"
 }
