--- a/config.example.json
+++ b/config.example.json
@@ -9,5 +9,6 @@
     "tokenExpiresIn": 7200,
     "awsS3AccessKey": "your-aws-s3-access-key-id",
     "awsS3SecretKey": "your-aws-s3-secret-access-key",
-	"awsS3BucketName": "sparcs.home"
+    "awsS3BucketName": "sparcs.home",
+    "trustProxy": true
 }
